Updated meta, fixed fixtureByGW bug

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
+      name="title"
+      content="DL Cup: The Official Website of AAiT's Department League Cup hosted by the
+      batch of 2018"
+    />
+    <meta
       name="description"
       content="Web app for the department league of Addis Ababa University"
     />
@@ -24,8 +29,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>
-      DL Cup: The Official Website of AAiT's Department League Cup hosted by 3rd
-      year Students
+      DL Cup: The Official Website of AAiT's Department League Cup hosted by the
+      batch of 2018
     </title>
   </head>
   <body>
