fixtures by team redesign and minor style updates

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="description"
-      content="Web app for the department league of Addis Ababa University"
+      content="DL Cup(Deparment League Cup) is a football tournament organized by the batch of 2018 at Addis Ababa insitute of Technology(AAiT). The competition is currently in its second season and involves all departments."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
