restructuring and google analytics

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,21 @@
       DL Cup: The Official Website of AAiT's Department League Cup hosted by the
       batch of 2018
     </title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G6PBHKRDBJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-G6PBHKRDBJ");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
